# FBXAnimation

./: .gitignore  CMakeLists.txt  notes.txt
FBXAnimation/: FBXAnimation.sln
FBXAnimation/FBXAnimation/: FBXAnimation.vcxproj  FBXAnimation.vcxproj.filters  anim_pose.h  fbx_wrapper.cpp  fbx_wrapper.h  geometry.h  imgui.ini  main.cpp  matrix.h  mesh.h  opengl_wrappers.h  quaternion.h  vector3.h
FBXAnimation/FBXAnimation/file_management/: file_scanner.cpp  file_scanner.h  filepaths.h
FBXAnimation/FBXAnimation/graphics/: camera.cpp  camera.h  colour.h  core_shaders.h  shader.cpp  shader.h  vertex_array.h  vertex_buffer.h
FBXAnimation/FBXAnimation/maths/: geometry.h  matrix.h  quaternion.h
source/animation/include/animation/: anim_pose.h  animation.h  pose.h  skeleton.h  transform.h
source/animation/source/: anim_pose.cpp  animation.cpp  pose.cpp  skeleton.cpp  transform.cpp
source/file/include/file/: binary_serializer.h  filepaths.h
source/file/source/: binary_serializer.cpp  file_scanner.cpp
source/graphics/include/graphics/: core_shaders.h  shader.h  vertex_buffer.h
source/graphics/source/: camera.cpp  shader.cpp  vertex_array.cpp
source/launch/: fbx_wrapper.cpp  fbx_wrapper.h  main.cpp
source/maths/include/maths/: quaternion.h  vector3.h
